src/LatteAntlr/LatteParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Latte.g4 by ANTLR 4.7.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace LatteAntlr {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7.2")]
[System.CLSCompliant(false)]
public partial class LatteParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, COMMENT=35, MULTICOMMENT=36, INT=37, ID=38, 
		WS=39, STR=40;
	public const int
		RULE_program = 0, RULE_topDef = 1, RULE_fieldDef = 2, RULE_arg = 3, RULE_block = 4, 
		RULE_stmt = 5, RULE_type_ = 6, RULE_item = 7, RULE_expr = 8, RULE_unOp = 9, 
		RULE_addOp = 10, RULE_mulOp = 11, RULE_relOp = 12;
	public static readonly string[] ruleNames = {
		"program", "topDef", "fieldDef", "arg", "block", "stmt", "type_", "item", 
		"expr", "unOp", "addOp", "mulOp", "relOp"
	};

	private static readonly string[] _LiteralNames = {
		null, "'('", "')'", "'class'", "'{'", "'}'", "';'", "','", "'='", "'++'", 
		"'--'", "'return'", "'if'", "'else'", "'while'", "'int'", "'string'", 
		"'boolean'", "'void'", "'&&'", "'||'", "'true'", "'false'", "'-'", "'!'", 
		"'+'", "'*'", "'/'", "'%'", "'<'", "'<='", "'>'", "'>='", "'=='", "'!='"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, "COMMENT", 
		"MULTICOMMENT", "INT", "ID", "WS", "STR"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Latte.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static LatteParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public LatteParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public LatteParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		public TopDefContext[] topDef() {
			return GetRuleContexts<TopDefContext>();
		}
		public TopDefContext topDef(int i) {
			return GetRuleContext<TopDefContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		public override void EnterRule(IParseTreeListener listener) {
			ILatteListener typedListener = listener as ILatteListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ILatteListener typedListener = listener as ILatteListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILatteVisitor<TResult> typedVisitor = visitor as ILatteVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 27;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 26; topDef();
				}
				}
				State = 29;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__14) | (1L << T__15) | (1L << T__16) | (1L << T__17))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TopDefContext : ParserRuleContext {
		public TopDefContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_topDef; } }
	 
		public TopDefContext() { }
		public virtual void CopyFrom(TopDefContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class FunctionDefContext : TopDefContext {
		public Type_Context type_() {
			return GetRuleContext<Type_Context>(0);
		}
		public ITerminalNode ID() { return GetToken(LatteParser.ID, 0); }
		public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public ArgContext arg() {
			return GetRuleContext<ArgContext>(0);
		}
		public FunctionDefContext(TopDefContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ILatteListener typedListener = listener as ILatteListener;
			if (typedListener != null) typedListener.EnterFunctionDef(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ILatteListener typedListener = listener as ILatteListener;
			if (typedListener != null) typedListener.ExitFunctionDef(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILatteVisitor<TResult> typedVisitor = visitor as ILatteVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunctionDef(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ClassDefContext : TopDefContext {
		public ITerminalNode ID() { return GetToken(LatteParser.ID, 0); }
		public FieldDefContext[] fieldDef() {
			return GetRuleContexts<FieldDefContext>();
		}
		public FieldDefContext fieldDef(int i) {
			return GetRuleContext<FieldDefContext>(i);
		}
		public ClassDefContext(TopDefContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ILatteListener typedListener = listener as ILatteListener;
			if (typedListener != null) typedListener.EnterClassDef(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ILatteListener typedListener = listener as ILatteListener;
			if (typedListener != null) typedListener.ExitClassDef(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILatteVisitor<TResult> typedVisitor = visitor as ILatteVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitClassDef(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TopDefContext topDef() {
		TopDefContext _localctx = new TopDefContext(Context, State);
		EnterRule(_localctx, 2, RULE_topDef);
		int _la;
		try {
			State = 50;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__14:
			case T__15:
			case T__16:
			case T__17:
				_localctx = new FunctionDefContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 31; type_();
				State = 32; Match(ID);
				State = 33; Match(T__0);
				State = 35;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__14) | (1L << T__15) | (1L << T__16) | (1L << T__17))) != 0)) {
					{
					State = 34; arg();
					}
				}

				State = 37; Match(T__1);
				State = 38; block();
				}
				break;
			case T__2:
				_localctx = new ClassDefContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 40; Match(T__2);
				State = 41; Match(ID);
				State = 42; Match(T__3);
				State = 46;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__14) | (1L << T__15) | (1L << T__16) | (1L << T__17))) != 0)) {
					{
					{
					State = 43; fieldDef();
					}
					}
					State = 48;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				State = 49; Match(T__4);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FieldDefContext : ParserRuleContext {
		public Type_Context type_() {
			return GetRuleContext<Type_Context>(0);
		}
		public ITerminalNode ID() { return GetToken(LatteParser.ID, 0); }
		public FieldDefContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_fieldDef; } }
		public override void EnterRule(IParseTreeListener listener) {
			ILatteListener typedListener = listener as ILatteListener;
			if (typedListener != null) typedListener.EnterFieldDef(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ILatteListener typedListener = listener as ILatteListener;
			if (typedListener != null) typedListener.ExitFieldDef(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILatteVisitor<TResult> typedVisitor = visitor as ILatteVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFieldDef(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FieldDefContext fieldDef() {
		FieldDefContext _localctx = new FieldDefContext(Context, State);
		EnterRule(_localctx, 4, RULE_fieldDef);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 52; type_();
			State = 53; Match(ID);
			State = 54; Match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ArgContext : ParserRuleContext {
		public Type_Context[] type_() {
			return GetRuleContexts<Type_Context>();
		}
		public Type_Context type_(int i) {
			return GetRuleContext<Type_Context>(i);
		}
		public ITerminalNode[] ID() { return GetTokens(LatteParser.ID); }
		public ITerminalNode ID(int i) {
			return GetToken(LatteParser.ID, i);
		}
		public ArgContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_arg; } }
		public override void EnterRule(IParseTreeListener listener) {
			ILatteListener typedListener = listener as ILatteListener;
			if (typedListener != null) typedListener.EnterArg(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ILatteListener typedListener = listener as ILatteListener;
			if (typedListener != null) typedListener.ExitArg(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILatteVisitor<TResult> typedVisitor = visitor as ILatteVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitArg(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ArgContext arg() {
		ArgContext _localctx = new ArgContext(Context, State);
		EnterRule(_localctx, 6, RULE_arg);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 56; type_();
			State = 57; Match(ID);
			State = 64;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__6) {
				{
				{
				State = 58; Match(T__6);
				State = 59; type_();
				State = 60; Match(ID);
				}
				}
				State = 66;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BlockContext : ParserRuleContext {
		public StmtContext[] stmt() {
			return GetRuleContexts<StmtContext>();
		}
		public StmtContext stmt(int i) {
			return GetRuleContext<StmtContext>(i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_block; } }
		public override void EnterRule(IParseTreeListener listener) {
			ILatteListener typedListener = listener as ILatteListener;
			if (typedListener != null) typedListener.EnterBlock(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ILatteListener typedListener = listener as ILatteListener;
			if (typedListener != null) typedListener.ExitBlock(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILatteVisitor<TResult> typedVisitor = visitor as ILatteVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BlockContext block() {
		BlockContext _localctx = new BlockContext(Context, State);
		EnterRule(_localctx, 8, RULE_block);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 67; Match(T__3);
			State = 71;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__3) | (1L << T__5) | (1L << T__10) | (1L << T__11) | (1L << T__13) | (1L << T__14) | (1L << T__15) | (1L << T__16) | (1L << T__17) | (1L << T__20) | (1L << T__21) | (1L << T__22) | (1L << T__23) | (1L << INT) | (1L << ID) | (1L << STR))) != 0)) {
				{
				{
				State = 68; stmt();
				}
				}
				State = 73;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 74; Match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StmtContext : ParserRuleContext {
		public StmtContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stmt; } }
	 
		public StmtContext() { }
		public virtual void CopyFrom(StmtContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class AssContext : StmtContext {
		public ITerminalNode ID() { return GetToken(LatteParser.ID, 0); }
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public AssContext(StmtContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ILatteListener typedListener = listener as ILatteListener;
			if (typedListener != null) typedListener.EnterAss(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ILatteListener typedListener = listener as ILatteListener;
			if (typedListener != null) typedListener.ExitAss(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILatteVisitor<TResult> typedVisitor = visitor as ILatteVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAss(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class DecrContext : StmtContext {
		public ITerminalNode ID() { return GetToken(LatteParser.ID, 0); }
		public DecrContext(StmtContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ILatteListener typedListener = listener as ILatteListener;
			if (typedListener != null) typedListener.EnterDecr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ILatteListener typedListener = listener as ILatteListener;
			if (typedListener != null) typedListener.ExitDecr(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILatteVisitor<TResult> typedVisitor = visitor as ILatteVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDecr(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class RetContext : StmtContext {
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public RetContext(StmtContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ILatteListener typedListener = listener as ILatteListener;
			if (typedListener != null) typedListener.EnterRet(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ILatteListener typedListener = listener as ILatteListener;
			if (typedListener != null) typedListener.ExitRet(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILatteVisitor<TResult> typedVisitor = visitor as ILatteVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRet(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class EmptyContext : StmtContext {
		public EmptyContext(StmtContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ILatteListener typedListener = listener as ILatteListener;
			if (typedListener != null) typedListener.EnterEmpty(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ILatteListener typedListener = listener as ILatteListener;
			if (typedListener != null) typedListener.ExitEmpty(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILatteVisitor<TResult> typedVisitor = visitor as ILatteVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEmpty(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class CondContext : StmtContext {
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public StmtContext stmt() {
			return GetRuleContext<StmtContext>(0);
		}
		public CondContext(StmtContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ILatteListener typedListener = listener as ILatteListener;
			if (typedListener != null) typedListener.EnterCond(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ILatteListener typedListener = listener as ILatteListener;
			if (typedListener != null) typedListener.ExitCond(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILatteVisitor<TResult> typedVisitor = visitor as ILatteVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCond(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class CondElseContext : StmtContext {
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public StmtContext[] stmt() {
			return GetRuleContexts<StmtContext>();
		}
		public StmtContext stmt(int i) {
			return GetRuleContext<StmtContext>(i);
		}
		public CondElseContext(StmtContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ILatteListener typedListener = listener as ILatteListener;
			if (typedListener != null) typedListener.EnterCondElse(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ILatteListener typedListener = listener as ILatteListener;
			if (typedListener != null) typedListener.ExitCondElse(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILatteVisitor<TResult> typedVisitor = visitor as ILatteVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCondElse(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class VRetContext : StmtContext {
		public VRetContext(StmtContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ILatteListener typedListener = listener as ILatteListener;
			if (typedListener != null) typedListener.EnterVRet(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ILatteListener typedListener = listener as ILatteListener;
			if (typedListener != null) typedListener.ExitVRet(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILatteVisitor<TResult> typedVisitor = visitor as ILatteVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVRet(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class IncrContext : StmtContext {
		public ITerminalNode ID() { return GetToken(LatteParser.ID, 0); }
		public IncrContext(StmtContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ILatteListener typedListener = listener as ILatteListener;
			if (typedListener != null) typedListener.EnterIncr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ILatteListener typedListener = listener as ILatteListener;
			if (typedListener != null) typedListener.ExitIncr(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILatteVisitor<TResult> typedVisitor = visitor as ILatteVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIncr(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class BlockStmtContext : StmtContext {
		public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public BlockStmtContext(StmtContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ILatteListener typedListener = listener as ILatteListener;
			if (typedListener != null) typedListener.EnterBlockStmt(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ILatteListener typedListener = listener as ILatteListener;
			if (typedListener != null) typedListener.ExitBlockStmt(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILatteVisitor<TResult> typedVisitor = visitor as ILatteVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBlockStmt(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class DeclContext : StmtContext {
		public Type_Context type_() {
			return GetRuleContext<Type_Context>(0);
		}
		public ItemContext[] item() {
			return GetRuleContexts<ItemContext>();
		}
		public ItemContext item(int i) {
			return GetRuleContext<ItemContext>(i);
		}
		public DeclContext(StmtContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ILatteListener typedListener = listener as ILatteListener;
			if (typedListener != null) typedListener.EnterDecl(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ILatteListener typedListener = listener as ILatteListener;
			if (typedListener != null) typedListener.ExitDecl(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILatteVisitor<TResult> typedVisitor = visitor as ILatteVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDecl(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class WhileContext : StmtContext {
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public StmtContext stmt() {
			return GetRuleContext<StmtContext>(0);
		}
		public WhileContext(StmtContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ILatteListener typedListener = listener as ILatteListener;
			if (typedListener != null) typedListener.EnterWhile(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ILatteListener typedListener = listener as ILatteListener;
			if (typedListener != null) typedListener.ExitWhile(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILatteVisitor<TResult> typedVisitor = visitor as ILatteVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitWhile(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class SExpContext : StmtContext {
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public SExpContext(StmtContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ILatteListener typedListener = listener as ILatteListener;
			if (typedListener != null) typedListener.EnterSExp(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ILatteListener typedListener = listener as ILatteListener;
			if (typedListener != null) typedListener.ExitSExp(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILatteVisitor<TResult> typedVisitor = visitor as ILatteVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSExp(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StmtContext stmt() {
		StmtContext _localctx = new StmtContext(Context, State);
		EnterRule(_localctx, 10, RULE_stmt);
		int _la;
		try {
			State = 129;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,7,Context) ) {
			case 1:
				_localctx = new EmptyContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 76; Match(T__5);
				}
				break;
			case 2:
				_localctx = new BlockStmtContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 77; block();
				}
				break;
			case 3:
				_localctx = new DeclContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 78; type_();
				State = 79; item();
				State = 84;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==T__6) {
					{
					{
					State = 80; Match(T__6);
					State = 81; item();
					}
					}
					State = 86;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				State = 87; Match(T__5);
				}
				break;
			case 4:
				_localctx = new AssContext(_localctx);
				EnterOuterAlt(_localctx, 4);
				{
				State = 89; Match(ID);
				State = 90; Match(T__7);
				State = 91; expr(0);
				State = 92; Match(T__5);
				}
				break;
			case 5:
				_localctx = new IncrContext(_localctx);
				EnterOuterAlt(_localctx, 5);
				{
				State = 94; Match(ID);
				State = 95; Match(T__8);
				State = 96; Match(T__5);
				}
				break;
			case 6:
				_localctx = new DecrContext(_localctx);
				EnterOuterAlt(_localctx, 6);
				{
				State = 97; Match(ID);
				State = 98; Match(T__9);
				State = 99; Match(T__5);
				}
				break;
			case 7:
				_localctx = new RetContext(_localctx);
				EnterOuterAlt(_localctx, 7);
				{
				State = 100; Match(T__10);
				State = 101; expr(0);
				State = 102; Match(T__5);
				}
				break;
			case 8:
				_localctx = new VRetContext(_localctx);
				EnterOuterAlt(_localctx, 8);
				{
				State = 104; Match(T__10);
				State = 105; Match(T__5);
				}
				break;
			case 9:
				_localctx = new CondContext(_localctx);
				EnterOuterAlt(_localctx, 9);
				{
				State = 106; Match(T__11);
				State = 107; Match(T__0);
				State = 108; expr(0);
				State = 109; Match(T__1);
				State = 110; stmt();
				}
				break;
			case 10:
				_localctx = new CondElseContext(_localctx);
				EnterOuterAlt(_localctx, 10);
				{
				State = 112; Match(T__11);
				State = 113; Match(T__0);
				State = 114; expr(0);
				State = 115; Match(T__1);
				State = 116; stmt();
				State = 117; Match(T__12);
				State = 118; stmt();
				}
				break;
			case 11:
				_localctx = new WhileContext(_localctx);
				EnterOuterAlt(_localctx, 11);
				{
				State = 120; Match(T__13);
				State = 121; Match(T__0);
				State = 122; expr(0);
				State = 123; Match(T__1);
				State = 124; stmt();
				}
				break;
			case 12:
				_localctx = new SExpContext(_localctx);
				EnterOuterAlt(_localctx, 12);
				{
				State = 126; expr(0);
				State = 127; Match(T__5);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
